# aoc-2021

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
aoc-2021/: CMakeLists.txt  fold.hpp  split.hpp
aoc-2021/day01/: day1.cpp
aoc-2021/day02/: day2.cpp
aoc-2021/day03/: day3.cpp  input.txt
aoc-2021/day04/: day4.cpp
aoc-2021/day05/: day5.cpp
aoc-2021/day06/: day6.cpp
aoc-2021/day07/: day7.cpp
aoc-2021/day08/: day8.cpp  input.txt
aoc-2021/day09/: day9.cpp
aoc-2021/day10/: day10.cpp  input.txt
aoc-2021/day11/: day11.cpp  input.txt
aoc-2021/day12/: day12.cpp
aoc-2021/day13/: day13.cpp  input.txt
aoc-2021/day14/: day14.cpp  input.txt
aoc-2021/day15/: day15.cpp  input.txt
aoc-2021/day16/: day16.cpp  input.txt
